# Haskell_Okt2017_Leipzig

./: .gitignore  Aeson.md  Lenses.md  Material.md  MonadTrans.md  Persist.md  Readme.md  Scotty.md  Typklassen.md  genPdf.sh
Beispiele/: Beispiele.cabal  LICENSE  README.md
Beispiele/Countdown/: Main.hs
Beispiele/Scripts/: Applicatives.hs  Foldables.hs  FuncComp.hs  Functors.hs  Lenses.hs  LibLenses.hs  Monaden.hs  Monoids.hs  RecSchemes.hs  Traversables.hs
Beispiele/app/: Main.hs
Beispiele/src/: EventStore.hs  Events.hs
Beispiele/src/EventStore/: Class.hs  Memory.hs  Projections.hs  Sqlite.hs
Beispiele/test/Data/String/: StripSpec.hs
Beispiele/web/: Main.hs
KataProposals/Anagrams/: Anagrams.hs
KataProposals/WordChain/: WordChains.hs  kata.md  wordchains
