name:                Beispiele
version:             0.1.0.0
synopsis:            Beispielprojekte für den Haskell-Kurs (Oktober 2017 - Leipzig)

homepage:            https://github.com/CarstenKoenig/Haskell_Okt2017_Leipzig/Beispiele#readme
license:             BSD3
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten.Koenig@hotmail.de
copyright:           Carsten Koenig
category:            Demo 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EventStore
                     , EventStore.Class
                     , EventStore.Memory
                     , EventStore.Projections
                     , EventStore.Sqlite
                     , Events
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , lens
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resource-pool
                     , text
  default-language:    Haskell2010

executable Countdown
  hs-source-dirs:      Countdown
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-terminal
                     , time
                     , stm
  default-language:    Haskell2010

executable Webstore
  hs-source-dirs:      web
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Beispiele
                     , aeson
                     , http-types
                     , mtl
                     , text
                     , scotty
  default-language:    Haskell2010

executable Beispiele
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Beispiele
  default-language:    Haskell2010

test-suite Beispiele-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.String.StripSpec
  build-depends:       base
                     , Beispiele
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CarstenKoenig/Haskell_Okt2017_Leipzig/Beispiele
